Offset tooltip to prevent flickering

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,6 @@ body {
     color: #ffffff; /* Text color */
     line-height: 1.3;
     top: 50px;
-    offset-path: path('M 0 0 L 100% 0 L 100% 100%'); /* A diagonal path from top-left to bottom-right */
-    offset-distance: 40px; /* Distance by which to offset */
 }
 
 .legend {
